﻿25.10.9
=======
 + Added support for InControl input fixes in Unity engine games using il2cpp
     (i.e. Tunic).

25.10.7.1
=========
 + Implement a glyph cache for Unity engine (InControl) buttom prompts.

25.10.7
=======
 + Unity engine button prompt preferences are now saved in profile INI.

25.10.6.6
=========
 + Added additional error handling to Mono embedding in Unity.

25.10.6.5
=========
 + Unity button prompt override now applies in real-time.
 + Clear cached InControl controller state when blocking input to Unity.

25.10.6.4
=========
 + Added experimental button prompt override for Unity engine games.
    * Setting is not stored in INI at the moment; in order for the button
        prompts to change, disconnect and reconnect your gamepad.

25.10.6.3
=========
 + Added universal fix for missing PlayStation vibration in Unity engine games
     using the InControl input backend and Mono embedding framework.
 + Only show XInput Emulation HID warning when a PlayStation controller is
     connected.

25.10.6.2
=========
 + Added warnings if a mod uses winhttp.dll in a GOG game, because that will
     break Galaxy and prevent achievements; it also breaks some of Special K!

    * In other words, don't install mods using winhttp.dll, find a different
        DLL name to use (!!)

25.10.6.1
=========
 + Rename GOG Galaxy INI otions to Galaxy.System instead of Platform.System.
 + Prevent initializing GOG Galaxy backend in non-GOG games.
 + Reduce log spam for achievement updates by only printing achivements with
     changed states.

25.10.6
=======
 + Added more details to SK's control panel in GOG games that use Galaxy;
     * Total time played, Sign-In (local) and Online (network) status.
 + Added a passthrough codepath if SK's WriteFile hook is ever accidentally
     called by SK (HID device files only).

25.10.5.5
=========
 + Improved handling of PlayStation special buttons (i.e. Paddle/Macro/Touchpad)